--- a/src/rag1.ipynb
+++ b/src/rag1.ipynb
@@ -597,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -828,7 +828,7 @@
       "\n",
       "Realizado esse procedimento é exibida a mensagem “Processo de\n",
       "================== AI response\n",
-      "The provided text does not contain information on how to access PJe. Therefore, I cannot answer your question. \n",
+      "To access PJeMídias, you need to log in using your CPF as the username and your registered password. Once logged in, you can access the system's features, including sending videos, managing your profile, and viewing media files. \n",
       "\n"
      ]
     }
