--- a/src/LLM RAG evaluation_2.ipynb
+++ b/src/LLM RAG evaluation_2.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# RAG system evaluation"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 25,
    "metadata": {},
@@ -25,13 +32,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Generate questions based in the documents"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "import os"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -829,10 +841,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/workspaces/llm-rag-evaluation/.venv/lib/python3.11/site-packages/pydantic/main.py:1086: PydanticDeprecatedSince20: The `__fields__` attribute is deprecated, use `model_fields` instead. Deprecated in Pydantic V2.0 to be removed in V3.0. See Pydantic V2 Migration Guide at https://errors.pydantic.dev/2.9/migration/\n",
+      "  warnings.warn(\n",
+      "/workspaces/llm-rag-evaluation/.venv/lib/python3.11/site-packages/pydantic/main.py:1086: PydanticDeprecatedSince20: The `__fields__` attribute is deprecated, use `model_fields` instead. Deprecated in Pydantic V2.0 to be removed in V3.0. See Pydantic V2 Migration Guide at https://errors.pydantic.dev/2.9/migration/\n",
+      "  warnings.warn(\n",
+      "/workspaces/llm-rag-evaluation/.venv/lib/python3.11/site-packages/pydantic/main.py:1086: PydanticDeprecatedSince20: The `__fields__` attribute is deprecated, use `model_fields` instead. Deprecated in Pydantic V2.0 to be removed in V3.0. See Pydantic V2 Migration Guide at https://errors.pydantic.dev/2.9/migration/\n",
+      "  warnings.warn(\n",
+      "/workspaces/llm-rag-evaluation/.venv/lib/python3.11/site-packages/pydantic/main.py:1086: PydanticDeprecatedSince20: The `__fields__` attribute is deprecated, use `model_fields` instead. Deprecated in Pydantic V2.0 to be removed in V3.0. See Pydantic V2 Migration Guide at https://errors.pydantic.dev/2.9/migration/\n",
+      "  warnings.warn(\n",
+      "/workspaces/llm-rag-evaluation/.venv/lib/python3.11/site-packages/pydantic/main.py:1086: PydanticDeprecatedSince20: The `__fields__` attribute is deprecated, use `model_fields` instead. Deprecated in Pydantic V2.0 to be removed in V3.0. See Pydantic V2 Migration Guide at https://errors.pydantic.dev/2.9/migration/\n",
+      "  warnings.warn(\n",
+      "/workspaces/llm-rag-evaluation/.venv/lib/python3.11/site-packages/pydantic/main.py:1086: PydanticDeprecatedSince20: The `__fields__` attribute is deprecated, use `model_fields` instead. Deprecated in Pydantic V2.0 to be removed in V3.0. See Pydantic V2 Migration Guide at https://errors.pydantic.dev/2.9/migration/\n",
+      "  warnings.warn(\n",
+      "/workspaces/llm-rag-evaluation/.venv/lib/python3.11/site-packages/pydantic/main.py:1086: PydanticDeprecatedSince20: The `__fields__` attribute is deprecated, use `model_fields` instead. Deprecated in Pydantic V2.0 to be removed in V3.0. See Pydantic V2 Migration Guide at https://errors.pydantic.dev/2.9/migration/\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
+   "source": [
+    "tru_recorder = TruChain(\n",
+    "    rag_chain_1_basic,\n",
+    "    app_name=\"ChatApplication\",\n",
+    "    app_version=\"Chain1\",\n",
+    "    feedbacks=[f_answer_relevance, f_context_relevance, f_groundedness],\n",
+    ")"
+   ]
   },
   {
    "cell_type": "code",
