--- a/src/LLM RAG evaluation_2.ipynb
+++ b/src/LLM RAG evaluation_2.ipynb
@@ -36,14 +36,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Generate questions based in the documents"
+    "# Generate questions based in the documents\n",
+    "\n",
+    "This questions will be used to evaluate the system later."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Opening files"
+    "## Opening files\n",
+    "\n",
+    "Unstructured is the best to open and clean pdf files. It also partition the file to better undestand its structure, but we dont use the partitions in this step."
    ]
   },
   {
@@ -429,6 +433,275 @@
    ],
    "source": [
     "df_questions.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_questions.to_csv(\"df_questions.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# File ingestion and chunking\n",
+    "\n",
+    "\n",
+    "- load pdf with pymuPDFLoader\n",
+    "    - partition \n",
+    "- load with unstructured\n",
+    "    - use partion from unstrutured\n",
+    "- embbed\n",
+    "    - gemini\n",
+    "    - gpt4all\n",
+    "    - allmini (multilingual)\n",
+    "- create a idnex for each one"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Document loading"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Simple loading"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Opening file: ../docs/Manual_de_utilização_do_PJe_sem_certificado_digital.pdf\n",
+      "Opening file: ../docs/processo_judicial_eletronico_grafica2.pdf\n",
+      "Opening file: ../docs/TRT04 - Guia para participação em audiências_sessões com a ferramenta Zoom.pdf\n",
+      "Opening file: ../docs/TRT04 - PJE 2.10.1 - Manual de autuação no  painel do procurador.pdf\n",
+      "Opening file: ../docs/guiapje-tribunal.pdf\n",
+      "Opening file: ../docs/guiapje-usuarios.pdf\n",
+      "Opening file: ../docs/Instalação do PJePortable v. 1.13.10 - para uso do PJe.pdf\n",
+      "Opening file: ../docs/PJe Mídias Desktop - Envio de Perícias em MP4.pdf\n",
+      "Opening file: ../docs/TRT04 - MANUAL PJE 2.10.1 - PAINEL DO ADVOGADO.pdf\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/workspaces/llm-rag-evaluation/.venv/lib/python3.11/site-packages/langchain_community/document_loaders/parsers/pdf.py:299: UserWarning: Warning: Empty content on page 22 of document ../docs/processo_judicial_eletronico_grafica2.pdf\n",
+      "  warnings.warn(\n",
+      "/workspaces/llm-rag-evaluation/.venv/lib/python3.11/site-packages/langchain_community/document_loaders/parsers/pdf.py:299: UserWarning: Warning: Empty content on page 3 of document ../docs/Zoom - CDTI OAB.pdf\n",
+      "  warnings.warn(\n",
+      "/workspaces/llm-rag-evaluation/.venv/lib/python3.11/site-packages/langchain_community/document_loaders/parsers/pdf.py:299: UserWarning: Warning: Empty content on page 4 of document ../docs/Zoom - CDTI OAB.pdf\n",
+      "  warnings.warn(\n",
+      "/workspaces/llm-rag-evaluation/.venv/lib/python3.11/site-packages/langchain_community/document_loaders/parsers/pdf.py:299: UserWarning: Warning: Empty content on page 5 of document ../docs/Zoom - CDTI OAB.pdf\n",
+      "  warnings.warn(\n",
+      "/workspaces/llm-rag-evaluation/.venv/lib/python3.11/site-packages/langchain_community/document_loaders/parsers/pdf.py:299: UserWarning: Warning: Empty content on page 6 of document ../docs/Zoom - CDTI OAB.pdf\n",
+      "  warnings.warn(\n",
+      "/workspaces/llm-rag-evaluation/.venv/lib/python3.11/site-packages/langchain_community/document_loaders/parsers/pdf.py:299: UserWarning: Warning: Empty content on page 7 of document ../docs/Zoom - CDTI OAB.pdf\n",
+      "  warnings.warn(\n",
+      "/workspaces/llm-rag-evaluation/.venv/lib/python3.11/site-packages/langchain_community/document_loaders/parsers/pdf.py:299: UserWarning: Warning: Empty content on page 8 of document ../docs/Zoom - CDTI OAB.pdf\n",
+      "  warnings.warn(\n",
+      "/workspaces/llm-rag-evaluation/.venv/lib/python3.11/site-packages/langchain_community/document_loaders/parsers/pdf.py:299: UserWarning: Warning: Empty content on page 9 of document ../docs/Zoom - CDTI OAB.pdf\n",
+      "  warnings.warn(\n",
+      "/workspaces/llm-rag-evaluation/.venv/lib/python3.11/site-packages/langchain_community/document_loaders/parsers/pdf.py:299: UserWarning: Warning: Empty content on page 10 of document ../docs/Zoom - CDTI OAB.pdf\n",
+      "  warnings.warn(\n",
+      "/workspaces/llm-rag-evaluation/.venv/lib/python3.11/site-packages/langchain_community/document_loaders/parsers/pdf.py:299: UserWarning: Warning: Empty content on page 11 of document ../docs/Zoom - CDTI OAB.pdf\n",
+      "  warnings.warn(\n",
+      "/workspaces/llm-rag-evaluation/.venv/lib/python3.11/site-packages/langchain_community/document_loaders/parsers/pdf.py:299: UserWarning: Warning: Empty content on page 12 of document ../docs/Zoom - CDTI OAB.pdf\n",
+      "  warnings.warn(\n",
+      "/workspaces/llm-rag-evaluation/.venv/lib/python3.11/site-packages/langchain_community/document_loaders/parsers/pdf.py:299: UserWarning: Warning: Empty content on page 13 of document ../docs/Zoom - CDTI OAB.pdf\n",
+      "  warnings.warn(\n",
+      "/workspaces/llm-rag-evaluation/.venv/lib/python3.11/site-packages/langchain_community/document_loaders/parsers/pdf.py:299: UserWarning: Warning: Empty content on page 17 of document ../docs/Zoom - CDTI OAB.pdf\n",
+      "  warnings.warn(\n",
+      "/workspaces/llm-rag-evaluation/.venv/lib/python3.11/site-packages/langchain_community/document_loaders/parsers/pdf.py:299: UserWarning: Warning: Empty content on page 18 of document ../docs/Zoom - CDTI OAB.pdf\n",
+      "  warnings.warn(\n",
+      "/workspaces/llm-rag-evaluation/.venv/lib/python3.11/site-packages/langchain_community/document_loaders/parsers/pdf.py:299: UserWarning: Warning: Empty content on page 19 of document ../docs/Zoom - CDTI OAB.pdf\n",
+      "  warnings.warn(\n",
+      "/workspaces/llm-rag-evaluation/.venv/lib/python3.11/site-packages/langchain_community/document_loaders/parsers/pdf.py:299: UserWarning: Warning: Empty content on page 20 of document ../docs/Zoom - CDTI OAB.pdf\n",
+      "  warnings.warn(\n",
+      "/workspaces/llm-rag-evaluation/.venv/lib/python3.11/site-packages/langchain_community/document_loaders/parsers/pdf.py:299: UserWarning: Warning: Empty content on page 22 of document ../docs/Zoom - CDTI OAB.pdf\n",
+      "  warnings.warn(\n",
+      "/workspaces/llm-rag-evaluation/.venv/lib/python3.11/site-packages/langchain_community/document_loaders/parsers/pdf.py:299: UserWarning: Warning: Empty content on page 25 of document ../docs/Zoom - CDTI OAB.pdf\n",
+      "  warnings.warn(\n",
+      "/workspaces/llm-rag-evaluation/.venv/lib/python3.11/site-packages/langchain_community/document_loaders/parsers/pdf.py:299: UserWarning: Warning: Empty content on page 26 of document ../docs/Zoom - CDTI OAB.pdf\n",
+      "  warnings.warn(\n",
+      "/workspaces/llm-rag-evaluation/.venv/lib/python3.11/site-packages/langchain_community/document_loaders/parsers/pdf.py:299: UserWarning: Warning: Empty content on page 27 of document ../docs/Zoom - CDTI OAB.pdf\n",
+      "  warnings.warn(\n",
+      "/workspaces/llm-rag-evaluation/.venv/lib/python3.11/site-packages/langchain_community/document_loaders/parsers/pdf.py:299: UserWarning: Warning: Empty content on page 41 of document ../docs/Zoom - CDTI OAB.pdf\n",
+      "  warnings.warn(\n",
+      "/workspaces/llm-rag-evaluation/.venv/lib/python3.11/site-packages/langchain_community/document_loaders/parsers/pdf.py:299: UserWarning: Warning: Empty content on page 42 of document ../docs/Zoom - CDTI OAB.pdf\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Opening file: ../docs/Zoom - CDTI OAB.pdf\n",
+      "Opening file: ../docs/PJeMídias - Acesso à gravação de audiências ou perícias.pdf\n",
+      "Opening file: ../docs/TRT04 - Manual para advogados e peritos (cadastramento de dados bancários para créditos em processos do TRT04).pdf\n",
+      "Opening file: ../docs/PJeMídiasDesktop - Envio de Provas em MP4.pdf\n",
+      "Opening file: ../docs/PROCEDIMENTOS PARA ENVIO DE CÁLCULOS DO PJECALC NO PJE PARA ADVOGADOS.pdf\n",
+      "Opening file: ../docs/guiapje-advogados.pdf\n",
+      "Opening file: ../docs/Cadastramento inicial no PJe.pdf\n",
+      "Opening file: ../docs/MANUAL FUNCIONAMENTO DAS PROCURADORIAS NO PJE.pdf\n",
+      "Opening file: ../docs/Manual.pdf\n",
+      "Opening file: ../docs/PJE - Processo Judicial Eletrônico.pdf\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "19"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from langchain.document_loaders import PyMuPDFLoader\n",
+    "\n",
+    "folder_path = \"../docs\"\n",
+    "\n",
+    "path, dirs, files = next(os.walk(folder_path))\n",
+    "        \n",
+    "documents_all = []\n",
+    "for file in files:\n",
+    "    file_path = os.path.join(path, file)\n",
+    "    print(f'Opening file: {file_path}')\n",
+    "    \n",
+    "    loader = PyMuPDFLoader(file_path)\n",
+    "    documents = loader.load()\n",
+    "\n",
+    "    document = \"\\n\".join( [doc.page_content for doc in documents] )\n",
+    "    \n",
+    "    documents_all.append(document)\n",
+    "\n",
+    "len(documents_all)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Simple chunking\n",
+    "\n",
+    "Just for clarification, below is given examples of chunk_size."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Characters count: 997\n"
+     ]
+    }
+   ],
+   "source": [
+    "text = \"\"\"\n",
+    "Guia\n",
+    "do\n",
+    "Rápido\n",
+    "  Pendentes de ciência ou de seu registro: conjunto de atos de comunicação em relação ao qual ainda \n",
+    "não há registro de ciência pelo destinatário, independentemente do meio de intimação utilizado. Quando \n",
+    "se tratar de citação ou notificação eletrônica na forma da Lei n.º 11.419/2006, é incluída a informação do \n",
+    "prazo máximo para ciência pelo destinatário, após o que ocorrerá a ciência ficta. O ícone “lupa vermelha” \n",
+    "permite que o destinatário tome ciência do ato. O ícone de resposta levará à ciência e a uma página em que \n",
+    "a resposta pode ser elaborada.\n",
+    "  Ciência dada pelo destinatário direto ou indireto e dentro do prazo: conjunto de atos de comu­\n",
+    "nicação em relação ao qual houve ciência pelo destinatário ou por quem o represente, independentemente \n",
+    "do meio de intimação utilizado, e cujo prazo ainda está em curso. Caso o ato não tenha prazo para resposta, \n",
+    "será exibido no agrupador “Sem prazo”. O prazo limite provável é exibido no canto inferior direito, assim como \n",
+    "\"\"\"\n",
+    "\n",
+    "print(f\"Characters count: {len(text)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Characters count: 1780\n"
+     ]
+    }
+   ],
+   "source": [
+    "text = \"\"\"\n",
+    "\n",
+    "Guia\n",
+    "do\n",
+    "Rápido\n",
+    "  Pendentes de ciência ou de seu registro: conjunto de atos de comunicação em relação ao qual ainda \n",
+    "não há registro de ciência pelo destinatário, independentemente do meio de intimação utilizado. Quando \n",
+    "se tratar de citação ou notificação eletrônica na forma da Lei n.º 11.419/2006, é incluída a informação do \n",
+    "prazo máximo para ciência pelo destinatário, após o que ocorrerá a ciência ficta. O ícone “lupa vermelha” \n",
+    "permite que o destinatário tome ciência do ato. O ícone de resposta levará à ciência e a uma página em que \n",
+    "a resposta pode ser elaborada.\n",
+    "  Ciência dada pelo destinatário direto ou indireto e dentro do prazo: conjunto de atos de comu­\n",
+    "nicação em relação ao qual houve ciência pelo destinatário ou por quem o represente, independentemente \n",
+    "do meio de intimação utilizado, e cujo prazo ainda está em curso. Caso o ato não tenha prazo para resposta, \n",
+    "será exibido no agrupador “Sem prazo”. O prazo limite provável é exibido no canto inferior direito, assim como \n",
+    "a informação do responsável pela ciência.\n",
+    "  Ciência dada pelo PJe e dentro do prazo:  conjunto de atos de comunicação em relação aos quais \n",
+    "houve ciência ficta por decurso do prazo de graça da Lei n.º 11.419/2006, nos casos de intimação eletrônica, \n",
+    "e cujo prazo ainda está em curso.\n",
+    "  Cujo prazo findou nos últimos 10 dias: conjunto de atos de comunicação cujo prazo expirou sem \n",
+    "resposta nos últimos 10 dias.\n",
+    "  Sem prazo:  conjunto de atos de comunicação em relação ao qual houve ciência pelo destinatário ou \n",
+    "por quem o represente ou ciência ficta, independentemente do meio de intimação utilizado, e que não têm \n",
+    "prazo para resposta.\n",
+    "  Respondidos nos últimos 10 dias: conjunto de atos de comunicação que foram respondidos pelo \n",
+    "intimado nos últimos 10 dias.\n",
+    "www.cnj.jus.br\n",
+    "15\n",
+    "\n",
+    "\"\"\"\n",
+    "\n",
+    "print(f\"Characters count: {len(text)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_text_splitters import CharacterTextSplitter\n",
+    "\n",
+    "text_splitter = CharacterTextSplitter(\n",
+    "    separator=\"\\n\\n\",\n",
+    "    chunk_size=1000,\n",
+    "    chunk_overlap=200,\n",
+    "    length_function=len,\n",
+    "    is_separator_regex=False,\n",
+    ")\n",
+    "texts = text_splitter.create_documents([state_of_the_union])\n",
+    "print(texts[0])"
    ]
   },
   {
