--- a/src/test_truelens.ipynb
+++ b/src/test_truelens.ipynb
@@ -12,18 +12,6 @@
       "🦑 Initialized with db url sqlite:///default.sqlite .\n",
       "🛑 Secret keys may be written to the database. See the `database_redact_keys` option of `TruSession` to prevent this.\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Updating app_name and app_version in apps table: 0it [00:00, ?it/s]\n",
-      "Updating app_id in records table: 0it [00:00, ?it/s]\n",
-      "Updating app_json in apps table: 0it [00:00, ?it/s]\n",
-      "Updating app_name and app_version in apps table: 0it [00:00, ?it/s]\n",
-      "Updating app_id in records table: 0it [00:00, ?it/s]\n",
-      "Updating app_json in apps table: 0it [00:00, ?it/s]\n"
-     ]
     }
    ],
    "source": [
@@ -32,7 +20,7 @@
     "from trulens.core import TruSession\n",
     "\n",
     "session = TruSession()\n",
-    "session.reset_database()"
+    "# session.reset_database()"
    ]
   },
   {
@@ -248,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -274,6 +262,7 @@
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th>Answer Relevance</th>\n",
+       "      <th>Context Relevance</th>\n",
        "      <th>Groundedness</th>\n",
        "      <th>latency</th>\n",
        "      <th>total_cost</th>\n",
@@ -285,32 +274,34 @@
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
+       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>ChatApplication</th>\n",
-       "      <th>Chain1</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2.245638</td>\n",
-       "      <td>0.004985</td>\n",
+       "      <th>RAG system</th>\n",
+       "      <th>ingestion_1__chain_1</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.857143</td>\n",
+       "      <td>0.843442</td>\n",
+       "      <td>0.000071</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                             Answer Relevance  Groundedness   latency  \\\n",
-       "app_name        app_version                                             \n",
-       "ChatApplication Chain1                    1.0           1.0  2.245638   \n",
+       "                                 Answer Relevance  Context Relevance  \\\n",
+       "app_name   app_version                                                 \n",
+       "RAG system ingestion_1__chain_1               0.0                0.0   \n",
        "\n",
-       "                             total_cost  \n",
-       "app_name        app_version              \n",
-       "ChatApplication Chain1         0.004985  "
+       "                                 Groundedness   latency  total_cost  \n",
+       "app_name   app_version                                               \n",
+       "RAG system ingestion_1__chain_1      0.857143  0.843442    0.000071  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -321,92 +312,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>question</th>\n",
-       "      <th>context</th>\n",
-       "      <th>score</th>\n",
-       "      <th>reason</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>What is Task Decomposition?</td>\n",
-       "      <td>Fig. 1. Overview of a LLM-powered autonomous a...</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>Criteria: The context must be relevant and hel...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>What is Task Decomposition?</td>\n",
-       "      <td>Fig. 10. A picture of a sea otter using rock t...</td>\n",
-       "      <td>0.333333</td>\n",
-       "      <td>Criteria: The context must be relevant and hel...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>What is Task Decomposition?</td>\n",
-       "      <td>(3) Task execution: Expert models execute on t...</td>\n",
-       "      <td>0.333333</td>\n",
-       "      <td>Criteria: The context must be relevant and hel...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>What is Task Decomposition?</td>\n",
-       "      <td>Fig. 6. Illustration of how Algorithm Distilla...</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>Criteria: The context provided does not addres...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                      question  \\\n",
-       "0  What is Task Decomposition?   \n",
-       "1  What is Task Decomposition?   \n",
-       "2  What is Task Decomposition?   \n",
-       "3  What is Task Decomposition?   \n",
-       "\n",
-       "                                             context     score  \\\n",
-       "0  Fig. 1. Overview of a LLM-powered autonomous a...  1.000000   \n",
-       "1  Fig. 10. A picture of a sea otter using rock t...  0.333333   \n",
-       "2  (3) Task execution: Expert models execute on t...  0.333333   \n",
-       "3  Fig. 6. Illustration of how Algorithm Distilla...  0.000000   \n",
-       "\n",
-       "                                              reason  \n",
-       "0  Criteria: The context must be relevant and hel...  \n",
-       "1  Criteria: The context must be relevant and hel...  \n",
-       "2  Criteria: The context must be relevant and hel...  \n",
-       "3  Criteria: The context provided does not addres...  "
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'recording' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[3], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtrulens\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mdashboard\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mdisplay\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m get_feedback_result\n\u001b[0;32m----> 3\u001b[0m last_record \u001b[38;5;241m=\u001b[39m \u001b[43mrecording\u001b[49m\u001b[38;5;241m.\u001b[39mrecords[\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m]\n\u001b[1;32m      4\u001b[0m get_feedback_result(last_record, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mContext Relevance\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'recording' is not defined"
+     ]
     }
    ],
    "source": [
@@ -473,7 +391,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
